# senseless-robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docs/: prerequisites.md  tb3_ekf.md
docs/assets/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  package.xml  turtlebot3_navigation_ekf.launch
launch/: navigation.launch  rendezvous_state_machine.launch  spawn_tb3.launch  turtlebot3_world_tour.launch
launch/includes/: ekf.launch.xml  move_base.launch.xml  octomap_server.launch.xml
nodes/: rendezvous_sm_node  simulated_motion_node  true_pose_node
params/: state_machine_params.yaml  turtlebot3_world_waypoints.yaml
rviz/: senseless_robot_default.rviz
src/senseless_robot/filters/: belief.py  ekf.py
src/senseless_robot/states/: __init__.py  ack_meas.py  compute_next_pose.py  listen_for_meas.py  move_to_rendezvous_pose.py  predict_prior_belief.py  send_rendezvous_pose.py  update_belief.py  utils.py
